# microsandbox

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  go.work  go.work.sum  pyproject.toml
control-plane/: go.mod  main.go  microvm.go  pool.go  pool_test.go  pools_test.go  proxy.go  proxy_test.go  server.go  template.go  template_test.go
daemon/: codeinterpreter.go  envd.go  envd_test.go  go.mod  go.sum  kernel.go  kernel_integration_test.go  loopback.go  main.go  protocol.go  server.go  server_test.go  translate.go  translate_test.go  vsock.go
daemon/genpb/codeinterpreter/: codeinterpreter.pb.go
daemon/genpb/envd/: envd.pb.go
daemon/proto/codeinterpreter/: codeinterpreter.proto
daemon/proto/envd/: envd.proto
docs/: ARCHITECTURE.md  E2B_ALIGNMENT_ROADMAP.md  MICROVM_DESIGN.md  POST_STAGE24_PLAN.md  ROADMAP.md  STAGE10_DESIGN.md  STAGE11_DESIGN.md  STAGE12_DESIGN.md  STAGE13_DESIGN.md  STAGE14_DESIGN.md  STAGE15_DESIGN.md  STAGE16_DESIGN.md  STAGE17_DESIGN.md  STAGE18_DESIGN.md  STAGE19_DESIGN.md  STAGE20_DESIGN.md  STAGE21_DESIGN.md  STAGE22_DESIGN.md  STAGE23_DESIGN.md  STAGE24_DESIGN.md  STAGE25_DESIGN.md  STAGE26R_DESIGN.md  STAGE26_DESIGN.md  STAGE2_DESIGN.md  STAGE3_DESIGN.md  STAGE4_DESIGN.md  STAGE5_DESIGN.md  STAGE6_DESIGN.md  STAGE7_DESIGN.md  STAGE8_DESIGN.md  STAGE9_DESIGN.md
examples/: quickstart.py
scripts/: build-control-plane.sh  build-rootfs-layered.sh  build-rootfs.sh  build-services.sh  build-snapshot.sh  build-template.sh  dev-up.sh  gen-proto.sh
services/: go.mod  go.sum
services/cmd/api/: auth.go  catalog.go  handlers.go  main.go  nodes.go  nodes_drain_test.go  nodes_test.go  placement_integration_test.go  relocate.go  relocate_integration_test.go  templates.go
services/cmd/client-proxy/: clientproxy_test.go  main.go  proxy.go  routes.go
services/cmd/msb-memfile-stat/: main.go
services/cmd/msb-rootfs-stat/: main.go
services/cmd/msb-seed/: main.go
services/cmd/orchestrator/: dataproxy.go  grpc.go  livesandbox_test.go  main.go  makesnapshot.go  memfile_cow_test.go  nbd.go  orchestrator_test.go  relocate.go  relocate_test.go  server.go  templates.go  templates_test.go
services/pkg/block/: block.go  cache.go  cache_test.go  overlay.go  overlay_test.go  readonly.go
services/pkg/catalog/: catalog.go  catalog_test.go  redis.go  redis_test.go
services/pkg/envdclient/: envdclient.go  envdclient_test.go
services/pkg/fc/: fc.go
services/pkg/nbd/: dispatch.go  dispatch_test.go  export.go  nbd.go  pool.go  pool_test.go  realdevice_test.go
services/pkg/network/: network.go  network_test.go
services/pkg/placement/: bestofk.go  discovery.go  discovery_redis.go  discovery_redis_test.go  discovery_test.go  drain.go  drain_test.go  placement.go  placement_test.go  registrar.go  registry.go
services/pkg/pool/: pool.go  pool_test.go
services/pkg/proxy/: proxy.go  proxy_test.go
services/pkg/storage/: cow.go  cow_memfile_test.go  cow_rootfs_test.go  cow_test.go  local.go  s3.go  size.go  storage.go  storage_test.go
services/pkg/store/: postgres.go  sqlite.go  store.go  store_test.go
services/pkg/template/: template.go  template_test.go
services/pkg/uffd/: source_bucket.go  source_bucket_test.go  source_layered.go  source_layered_test.go  source_mapped.go  uffd.go  (+2 more)
src/microsandbox/: __init__.py  backend.py  client.py  connect.py  protocol.py  server.py
templates/example/: Dockerfile
tests/: conftest.py  test_auth.py  test_connect.py  test_discovery.py  test_drain.py  test_files.py  test_isolation.py  test_metadata.py  test_microvm.py  test_microvm_snapshot.py  test_ports.py  test_resident.py  test_sandbox.py  test_stateful.py  test_template.py  test_transport.py
(+11 files in other folders)
