[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microsandbox"
version = "0.1.0"
description = "A learning code sandbox, implemented from scratch and progressively approaching E2B"
readme = "README.md"
requires-python = ">=3.11"
# Stages 0/1 both keep zero runtime dependencies: Stage 1 drives Docker via docker
# CLI subprocesses rather than docker-py (a sync library inside an asyncio daemon
# only makes things more convoluted). Later stages add dependencies as needed, with a stated reason.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Stage 2b introduces runtime dependencies for the first time: a resident Jupyter
# kernel (stateful REPL, aligned with E2B). Note these are only needed by the
# "in-container daemon" -- the agent image (see Dockerfile) already pre-installs them;
# running the client / local / docker / container backends on the host doesn't need
# them, so they're made an optional extra, and backend.py also lazily imports
# jupyter_client to keep the non-kernel path dependency-free.
kernel = [
    "ipykernel>=6",
    "jupyter_client>=8",
]

[project.scripts]
microsandbox-daemon = "microsandbox.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/microsandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
