[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microsandbox"
version = "0.1.0"
description = "A learning code sandbox, implemented from scratch and progressively approaching E2B"
readme = "README.md"
requires-python = ">=3.11"
# The host side has zero runtime dependencies: the client drives Firecracker (and
# docker, for the one-time rootfs build) via CLI subprocesses rather than a Python
# library. The in-VM kernel's deps live in the [kernel] extra below.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# The in-VM execution backend is a resident Jupyter kernel (stateful REPL, aligned
# with E2B). These deps are only needed by the daemon *inside the VM* -- the agent
# image (see Dockerfile), from which the rootfs is exported, already pre-installs
# them. The host client doesn't need them, so they're an optional extra, and
# backend.py imports jupyter_client lazily.
kernel = [
    "ipykernel>=6",
    "jupyter_client>=8",
]

[project.scripts]
microsandbox-daemon = "microsandbox.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/microsandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
